After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 641996 - window labeler workarea code broken
window labeler workarea code broken
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: libgnome-desktop
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-02-10 02:08 UTC by Matthias Clasen
Modified: 2011-02-10 03:08 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2011-02-10 02:08:43 UTC
It uses the X protocol screen nr to pick from the _NET_WORKAREA array. But that array indexed by workspace, not by screen.

You have to get _NET_CURRENT_DESKTOP (also a root window property), which gives you the index to use (and at least theoretically, the workare can change when the current desktop changes).

I will probably end up adding a workarea api to GDK in 3.2