Properly get the workarea for positioning the labels

This fixes https://bugzilla.gnome.org/show_bug.cgi?id=641996